--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
 	"require": {
 		"laravel/framework": "4.2.*",
 		"esensi/model": "~0.3",
-		"fzaninotto/faker": "^1.5"
+		"fzaninotto/faker": "^1.5",
+		"smalldogs/html5inputs": "2.*"
+
     	
 
 
